crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__numeric_literal_forms.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 4
            params:
              open:
                start: 4
                end: 5
              inner: []
              close:
                start: 5
                end: 6
            result: ~
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 7
                    end: 8
                  inner:
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 2
                              span:
                                start: 19
                                end: 22
                            ty: ~
                            value:
                              inner:
                                Int:
                                  value: 255
                              span:
                                start: 28
                                end: 32
                        span:
                          start: 13
                          end: 32
                      separator:
                        start: 32
                        end: 33
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 3
                              span:
                                start: 44
                                end: 50
                            ty: ~
                            value:
                              inner:
                                Int:
                                  value: 10
                              span:
                                start: 53
                                end: 59
                        span:
                          start: 38
                          end: 59
                      separator:
                        start: 59
                        end: 60
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 4
                              span:
                                start: 71
                                end: 74
                            ty: ~
                            value:
                              inner:
                                Int:
                                  value: 1000000
                              span:
                                start: 80
                                end: 89
                        span:
                          start: 65
                          end: 89
                      separator:
                        start: 89
                        end: 90
                  close:
                    start: 91
                    end: 92
            span:
              start: 7
              end: 92
      span:
        start: 0
        end: 92
    separator: ~
