crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__parse_export_with_alias.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 7
            params:
              open:
                start: 7
                end: 8
              inner: []
              close:
                start: 8
                end: 9
            result:
              inner:
                Identifier:
                  symbol: 2
              span:
                start: 13
                end: 16
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 17
                    end: 18
                  inner:
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span: ~
                            name:
                              inner: 3
                              span:
                                start: 29
                                end: 30
                            ty:
                              inner:
                                Identifier:
                                  symbol: 2
                              span:
                                start: 32
                                end: 35
                            value:
                              inner:
                                Label:
                                  label:
                                    inner: 4
                                    span:
                                      start: 38
                                      end: 39
                                  block:
                                    inner:
                                      Loop:
                                        block:
                                          inner:
                                            Block:
                                              statements:
                                                open:
                                                  start: 46
                                                  end: 47
                                                inner:
                                                  - inner:
                                                      inner:
                                                        Expression:
                                                          inner:
                                                            Break:
                                                              label:
                                                                inner: 4
                                                                span:
                                                                  start: 63
                                                                  end: 64
                                                              value:
                                                                inner:
                                                                  Cast:
                                                                    value:
                                                                      inner:
                                                                        Int:
                                                                          value: 1
                                                                      span:
                                                                        start: 65
                                                                        end: 66
                                                                    ty:
                                                                      inner:
                                                                        Identifier:
                                                                          symbol: 2
                                                                      span:
                                                                        start: 70
                                                                        end: 73
                                                                span:
                                                                  start: 65
                                                                  end: 73
                                                          span:
                                                            start: 56
                                                            end: 73
                                                      span:
                                                        start: 56
                                                        end: 73
                                                    separator:
                                                      start: 73
                                                      end: 74
                                                close:
                                                  start: 79
                                                  end: 80
                                          span:
                                            start: 46
                                            end: 80
                                    span:
                                      start: 41
                                      end: 80
                              span:
                                start: 38
                                end: 80
                        span:
                          start: 23
                          end: 80
                      separator:
                        start: 80
                        end: 81
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Identifier:
                                symbol: 3
                            span:
                              start: 87
                              end: 88
                        span:
                          start: 87
                          end: 88
                      separator: ~
                  close:
                    start: 89
                    end: 90
            span:
              start: 17
              end: 90
      span:
        start: 0
        end: 90
    separator: ~
  - inner:
      inner:
        Export:
          entries:
            open:
              start: 99
              end: 100
            inner:
              - inner:
                  inner:
                    name:
                      inner: 1
                      span:
                        start: 105
                        end: 109
                    alias:
                      inner: 5
                      span:
                        start: 113
                        end: 119
                  span:
                    start: 105
                    end: 119
                separator:
                  start: 119
                  end: 120
            close:
              start: 121
              end: 122
      span:
        start: 92
        end: 122
    separator: ~
